# demonstrate_invalid_module

./: CMakeLists.txt  README.md  try.cc  try_lib_only.cc
